--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><i class="fas fa-water"></i> Maravillas Acuáticas</h1>
+            <h1><i class="fas fa-water"></i> Maravillas Acuáticas Aqui</h1>
             <nav>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
