feat: Sección de Conservacion

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <section id="conservacion">
-            <h2><i class="fas fa-hand-holding-water"></i> Conservación</h2>
+            <h2><i class="fas fa-hand-holding-water"></i> Conservación(IMPORTANTE)</h2>
             <div class="conservation-info">
                 <p>Los océanos cubren el 71% de la Tierra, pero están en peligro por:</p>
                 <ul>
